<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.login.fragments.FragmentRegister"
    android:background="@color/register_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/register_img_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/fragment_vertical_margin"
        android:contentDescription="@string/register_img_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:srcCompat="@drawable/foto" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_text_name_layout"
        app:layout_constraintWidth_percent="0.8"
        app:startIconDrawable="@drawable/cara"
        app:startIconContentDescription="@string/register_img_name_description"
        app:endIconMode="custom"
        app:endIconDrawable="@android:drawable/ic_menu_view"
        app:endIconContentDescription="@string/register_img_name_end_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_img_photo"
        android:hint="@string/register_text_name"
        app:errorEnabled="true"
        style="@style/register_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_text_name"
            style="@style/register_input"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_text_surname_layout"
        app:layout_constraintWidth_percent="0.8"
        app:startIconDrawable="@drawable/cara"
        app:startIconContentDescription="@string/register_img_surname_description"
        app:endIconMode="custom"
        app:endIconDrawable="@android:drawable/ic_menu_view"
        app:endIconContentDescription="@string/register_img_surname_end_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_name_layout"
        android:hint="@string/register_text_surname"
        app:errorEnabled="true"
        style="@style/register_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_text_surname"
            style="@style/register_input"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_spinner_ages_layout"
        app:layout_constraintWidth_percent="0.8"
        style="@style/register_spinner_layout"
        app:layout_constraintTop_toBottomOf="@+id/register_text_surname_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:errorEnabled="true"
        android:hint="@string/register_dropdown_edad">

        <AutoCompleteTextView
            android:id="@+id/register_spinner_ages"
            style="@style/register_spinner_ages" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn_ok"
        style="@style/register_btn_ok"
        android:text="@string/register_btn_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_spinner_ages_layout"
        app:layout_constraintWidth_percent="0.6" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_foot_text"
        style="@style/register_subtext"
        android:text="@string/register_foot_text"
        app:layout_constraintEnd_toStartOf="@+id/register_foot_link"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_foot_link"
        style="@style/register_link"
        android:text="@string/register_foot_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/register_foot_text" />

</androidx.constraintlayout.widget.ConstraintLayout>