<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentHomeOneLayout"
    tools:context=".features.home.fragments.FragmentHomeOne">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_title_text"
        android:textAppearance="?h5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:layout_marginTop="@dimen/home_title_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_card_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toTopOf="@+id/cardview_card_container2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title_text"
        app:layout_constraintWidth_percent="0.7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardview_card_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cardview_card_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintHeight_percent="0.75"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardview_card_subTitle"
                style="@style/card_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:text="@string/home_card_subtitle_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_card_img" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardview_card_title"
                style="?h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="start"
                android:text="@string/home_card_title_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_card_subTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_card_container2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_card_container"
        app:layout_constraintWidth_percent="0.7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardview_card_root2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cardview_card_img2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintHeight_percent="0.75"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardview_card_subTitle2"
                style="@style/card_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_card_subtitle_text2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_card_img2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardview_card_title2"
                style="?h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="start"
                android:text="@string/home_card_title_text2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_card_subTitle2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>